Native/Test/KL/error-no-cast-from-struct-to-boolean.out
error-no-cast-from-struct-to-boolean.kl:7:3: error: no cast exists from MyType to Boolean
