Native/Test/KL/error-no-cast-from-struct-to-boolean.kl
struct MyType {
  Integer foo;
};

operator entry() {
  MyType myType;
  if (myType) {
    report "blah";
  }
}
